# AugMe

./: .gitignore  MANIFEST.in  README.md  setup.cfg
augme/assets/text/: Longman_Communication_3000.txt  TOCFL_7517.txt
augme/tests/: test.py
augme/video/: __init__.py  functional.py  transforms.py
augme/video/ffmpeg/: __init__.py  aspect_ratio.py  audio_swap.py  base_augmenter.py  blend.py  blur.py  brightness.py  color_jitter.py  concat.py  contrast.py  crop.py  emboss.py  fps.py  fstack.py  gradient.py  grayscale.py  hflip.py  hstack.py  loop.py  no_audio.py  noise.py  overlay.py  pad.py  quality.py  random_frames.py  resize.py  resolution.py  rotate.py  silent_audio.py  speed.py  text.py  transpose.py  trim.py  vflip.py  vstack.py
augme/video/helpers/: __init__.py  constants.py  ffmpeg.py  metadata.py  utils.py
