[metadata]
name = augme
version = 0.1.0
author = Roman Akchurin
author_email = me@romanakchurin.com
description = Multimedia augmentations library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romanak/AugMe
project_urls =
    Bug Tracker = https://github.com/romanak/AugMe/issues
    repository = https://github.com/romanak/AugMe
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19.5
    Pillow>=9.0.0
